# fullyautobob8.8

./: .env.example  .gitignore  AGENTS.md  README.md  dashboard.out  data_harvester.py  debug_coinbase.py  debug_generation_logic.py  dump_all_value_files.py  fast_backfill.py  harvest_seed.pid  hyper_lab.out  hyper_lab_long.out  hyper_lab_long_inline.out  hyper_lab_pid.txt  initial_population.json  inspect_ccxt.py  inspect_ccxt_data.py  install_and_launch_v475.sh  loop.out  migration-notes.md  nohup_test.out  population_dump.json  pyproject.toml  requirements.txt  strace_output.txt  test_cli_import.py  test_imports_stepwise.py  test_loop.py  validate_config_test.py
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: engineering.instructions.md  harvester.instructions.md  llm.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: experiment-plan.prompt.md  kickoff.prompt.md  refactor-harvester.prompt.md  release.prompt.md  risk-audit.prompt.md  write-diff.prompt.md
.github/workflows/: ci.yml  self-check.yml
backup_20250819_202552/: data_lake.tgz
configs/: config.yaml  symbols.yaml
dashboard/: app.py  hyper_lab_app.py
probes/: probe_D_open_bar.py
scripts/: supervise_main_loop.sh
tests/: test_cli_check.py  test_cli_redis_connection.py
tests/allocation/: test_allocation.py
tests/core/: test_cli_import_no_eager_eil.py  test_config.py
tests/data/: test_catalog_snapshot.py  test_coverage_gate_double_encoded.py  (+8 more)
v26meme/: cli.py
v26meme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+55 files in other folders)
